--- a/OLX_BuyLeads/BuyLeadsCell.xib
+++ b/OLX_BuyLeads/BuyLeadsCell.xib
@@ -20,9 +20,6 @@
                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Yfi-dw-bhf">
                         <rect key="frame" x="10" y="9" width="300" height="97"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
-                        <constraints>
-                            <constraint firstAttribute="width" constant="300" id="P4l-dr-0bl"/>
-                        </constraints>
                         <userDefinedRuntimeAttributes>
                             <userDefinedRuntimeAttribute type="number" keyPath="layer.cornerRadios">
                                 <integer key="value" value="5"/>
@@ -61,31 +58,30 @@
                         <color key="backgroundColor" red="0.0" green="0.058823529409999999" blue="0.0036798876239999999" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <constraints>
                             <constraint firstAttribute="height" constant="1" id="VRZ-1B-DGF"/>
-                            <constraint firstAttribute="width" constant="290" id="bl0-vX-b2P"/>
                         </constraints>
                         <fontDescription key="fontDescription" type="system" pointSize="17"/>
                         <color key="textColor" white="0.66666666666666663" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <nil key="highlightedColor"/>
                     </label>
-                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="dZy-hr-ARA">
-                        <rect key="frame" x="15" y="55" width="273" height="0.0"/>
-                        <constraints>
-                            <constraint firstAttribute="width" constant="273" id="7zH-VF-fYA"/>
-                        </constraints>
+                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="dZy-hr-ARA">
+                        <rect key="frame" x="15" y="55" width="195" height="0.0"/>
                         <fontDescription key="fontDescription" type="system" pointSize="17"/>
                         <nil key="textColor"/>
                         <nil key="highlightedColor"/>
                     </label>
-                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="koF-Oq-0Zl">
-                        <rect key="frame" x="276" y="17" width="25" height="25"/>
+                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="koF-Oq-0Zl">
+                        <rect key="frame" x="241" y="17" width="60" height="25"/>
                         <constraints>
-                            <constraint firstAttribute="width" constant="25" id="F0x-zI-dOF"/>
+                            <constraint firstAttribute="width" constant="60" id="F0x-zI-dOF"/>
                             <constraint firstAttribute="height" constant="25" id="rnU-xU-mIE"/>
                         </constraints>
-                        <state key="normal" title="Button"/>
-                        <buttonConfiguration key="configuration" style="plain"/>
+                        <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                        <inset key="imageEdgeInsets" minX="0.0" minY="0.0" maxX="2.2250738585072014e-308" maxY="0.0"/>
+                        <state key="normal" title="VISITED">
+                            <color key="titleColor" systemColor="systemGreenColor"/>
+                        </state>
                     </button>
-                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Q3b-bq-2e3">
+                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Q3b-bq-2e3">
                         <rect key="frame" x="231" y="59" width="84" height="0.0"/>
                         <constraints>
                             <constraint firstAttribute="width" constant="84" id="DYQ-PW-XYm"/>
@@ -94,7 +90,7 @@
                         <nil key="textColor"/>
                         <nil key="highlightedColor"/>
                     </label>
-                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="edK-px-IVh">
+                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="edK-px-IVh">
                         <rect key="frame" x="15" y="60" width="273" height="0.0"/>
                         <constraints>
                             <constraint firstAttribute="width" constant="273" id="fLi-TB-ipY"/>
@@ -107,17 +103,13 @@
                         <rect key="frame" x="10" y="75" width="295" height="31"/>
                         <subviews>
                             <stackView opaque="NO" contentMode="scaleToFill" distribution="equalSpacing" spacing="40" translatesAutoresizingMaskIntoConstraints="NO" id="lPf-nk-sYs">
-                                <rect key="frame" x="27" y="2" width="237" height="25"/>
+                                <rect key="frame" x="27" y="2" width="237" height="20"/>
                                 <subviews>
                                     <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="chat" translatesAutoresizingMaskIntoConstraints="NO" id="s0U-sL-H0T">
-                                        <rect key="frame" x="0.0" y="0.0" width="25" height="25"/>
-                                        <constraints>
-                                            <constraint firstAttribute="width" constant="25" id="4Ox-D0-0TK"/>
-                                            <constraint firstAttribute="height" constant="25" id="yhq-6X-SXs"/>
-                                        </constraints>
+                                        <rect key="frame" x="0.0" y="0.0" width="24" height="20"/>
                                     </imageView>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="QI0-6Z-JZ4">
-                                        <rect key="frame" x="65" y="5" width="1" height="20"/>
+                                        <rect key="frame" x="64.666666666666671" y="0.0" width="1" height="20"/>
                                         <color key="backgroundColor" red="0.94901960780000005" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
                                         <constraints>
                                             <constraint firstAttribute="width" constant="1" id="UJj-Rg-n9U"/>
@@ -128,14 +120,10 @@
                                         <nil key="highlightedColor"/>
                                     </label>
                                     <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="thick" translatesAutoresizingMaskIntoConstraints="NO" id="tjj-nK-eYI">
-                                        <rect key="frame" x="106" y="0.0" width="25" height="25"/>
-                                        <constraints>
-                                            <constraint firstAttribute="height" constant="25" id="EfM-lX-Hoo"/>
-                                            <constraint firstAttribute="width" constant="25" id="U5C-zL-xSA"/>
-                                        </constraints>
+                                        <rect key="frame" x="106.66666666666666" y="0.0" width="24" height="20"/>
                                     </imageView>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="ljB-00-F5y">
-                                        <rect key="frame" x="171" y="5" width="1" height="20"/>
+                                        <rect key="frame" x="171.33333333333334" y="0.0" width="1" height="20"/>
                                         <color key="backgroundColor" red="0.94901960780000005" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
                                         <constraints>
                                             <constraint firstAttribute="height" constant="20" id="QT0-RR-joD"/>
@@ -146,17 +134,9 @@
                                         <nil key="highlightedColor"/>
                                     </label>
                                     <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="like" translatesAutoresizingMaskIntoConstraints="NO" id="r8s-1a-fsB">
-                                        <rect key="frame" x="212" y="0.0" width="25" height="25"/>
-                                        <constraints>
-                                            <constraint firstAttribute="width" constant="25" id="EtA-tM-Nu7"/>
-                                            <constraint firstAttribute="height" constant="25" id="gZj-ES-PoO"/>
-                                        </constraints>
+                                        <rect key="frame" x="213" y="0.0" width="24" height="20"/>
                                     </imageView>
                                 </subviews>
-                                <constraints>
-                                    <constraint firstAttribute="height" constant="25" id="0xH-nj-rZ4"/>
-                                    <constraint firstAttribute="width" constant="237" id="cZB-tA-2jj"/>
-                                </constraints>
                             </stackView>
                         </subviews>
                         <color key="backgroundColor" red="0.87336868050000005" green="0.88702100520000005" blue="0.89078110460000004" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
@@ -164,7 +144,6 @@
                             <constraint firstItem="lPf-nk-sYs" firstAttribute="leading" secondItem="jLP-Po-uRD" secondAttribute="leading" constant="27" id="0gf-xk-UoQ"/>
                             <constraint firstItem="lPf-nk-sYs" firstAttribute="top" secondItem="jLP-Po-uRD" secondAttribute="top" constant="2" id="86N-E9-Xqx"/>
                             <constraint firstItem="lPf-nk-sYs" firstAttribute="leading" secondItem="jLP-Po-uRD" secondAttribute="leading" constant="27" id="AxL-Sg-caM"/>
-                            <constraint firstAttribute="width" constant="295" id="BcN-j7-kat"/>
                             <constraint firstAttribute="height" constant="31" id="OBE-P1-O9h"/>
                             <constraint firstAttribute="trailing" secondItem="lPf-nk-sYs" secondAttribute="trailing" constant="31" id="Obv-HX-GEr"/>
                             <constraint firstItem="lPf-nk-sYs" firstAttribute="centerX" secondItem="jLP-Po-uRD" secondAttribute="centerX" constant="-2" id="Ppc-VE-sGY"/>
@@ -186,11 +165,11 @@
                     <constraint firstAttribute="trailing" secondItem="Yfi-dw-bhf" secondAttribute="trailing" constant="10" id="NFl-Ik-WD8"/>
                     <constraint firstItem="SOz-ak-Acb" firstAttribute="leading" secondItem="ZdP-uv-nan" secondAttribute="leading" constant="15" id="OVB-V0-QsN"/>
                     <constraint firstAttribute="trailing" secondItem="koF-Oq-0Zl" secondAttribute="trailing" constant="19" id="YBU-xH-b16"/>
+                    <constraint firstAttribute="trailing" secondItem="dZy-hr-ARA" secondAttribute="trailing" constant="110" id="fig-Dp-9UY"/>
                     <constraint firstAttribute="trailing" secondItem="6iL-FA-lnj" secondAttribute="trailing" constant="15" id="gY8-28-Vu6"/>
                     <constraint firstAttribute="bottom" secondItem="Yfi-dw-bhf" secondAttribute="bottom" constant="15" id="hLp-JI-ZWM"/>
                     <constraint firstItem="edK-px-IVh" firstAttribute="top" secondItem="dZy-hr-ARA" secondAttribute="bottom" constant="5" id="kXi-oG-K3I"/>
                     <constraint firstItem="edK-px-IVh" firstAttribute="leading" secondItem="ZdP-uv-nan" secondAttribute="leading" constant="15" id="lN4-1V-xIm"/>
-                    <constraint firstAttribute="bottom" secondItem="jLP-Po-uRD" secondAttribute="bottom" constant="20" symbolic="YES" id="mah-yv-BTo"/>
                     <constraint firstItem="dZy-hr-ARA" firstAttribute="leading" secondItem="ZdP-uv-nan" secondAttribute="leading" constant="15" id="myY-8j-79D"/>
                     <constraint firstItem="6iL-FA-lnj" firstAttribute="leading" secondItem="ZdP-uv-nan" secondAttribute="leading" constant="15" id="o0D-hc-lLy"/>
                     <constraint firstItem="Yfi-dw-bhf" firstAttribute="leading" secondItem="ZdP-uv-nan" secondAttribute="leading" constant="10" id="pAS-6S-n6I"/>
@@ -210,8 +189,9 @@
                 <outlet property="contact_name" destination="SOz-ak-Acb" id="4eV-pi-L2y"/>
                 <outlet property="make" destination="edK-px-IVh" id="x40-mQ-gna"/>
                 <outlet property="status_text" destination="9rh-oK-WvP" id="LkO-6D-Yv8"/>
+                <outlet property="visitedBtn" destination="koF-Oq-0Zl" id="1YC-Op-xwx"/>
             </connections>
-            <point key="canvasLocation" x="103.81679389312977" y="2.8169014084507045"/>
+            <point key="canvasLocation" x="43" y="1"/>
         </tableViewCell>
     </objects>
     <resources>
@@ -220,6 +200,9 @@
         <image name="thick" width="24" height="24"/>
         <systemColor name="systemBackgroundColor">
             <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+        </systemColor>
+        <systemColor name="systemGreenColor">
+            <color red="0.20392156859999999" green="0.78039215689999997" blue="0.34901960780000002" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </systemColor>
     </resources>
 </document>
