--- a/OLX_BuyLeads/CollectionTableViewCell.xib
+++ b/OLX_BuyLeads/CollectionTableViewCell.xib
@@ -8,18 +8,18 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="CollectionTableViewCell" rowHeight="236" id="srV-jY-tTo" customClass="CollectionTableViewCell" customModule="OLX_BuyLeads" customModuleProvider="target">
-            <rect key="frame" x="0.0" y="0.0" width="631" height="236"/>
+        <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="CollectionTableViewCell" rowHeight="6" id="srV-jY-tTo" customClass="CollectionTableViewCell" customModule="OLX_BuyLeads" customModuleProvider="target">
+            <rect key="frame" x="0.0" y="0.0" width="631" height="6"/>
             <autoresizingMask key="autoresizingMask"/>
-            <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="srV-jY-tTo" id="nOC-r1-fUS">
-                <rect key="frame" x="0.0" y="0.0" width="631" height="236"/>
+            <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" ambiguous="YES" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="srV-jY-tTo" id="nOC-r1-fUS">
+                <rect key="frame" x="0.0" y="0.0" width="631" height="6"/>
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
                     <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" dataMode="none" translatesAutoresizingMaskIntoConstraints="NO" id="Joo-Hs-yeL">
-                        <rect key="frame" x="20" y="0.0" width="591" height="236"/>
+                        <rect key="frame" x="20" y="0.0" width="591" height="0.0"/>
                         <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <constraints>
-                            <constraint firstAttribute="width" constant="591" id="WSO-DX-QEk"/>
+                            <constraint firstAttribute="height" id="4AB-UJ-Z1c"/>
                         </constraints>
                         <collectionViewFlowLayout key="collectionViewLayout" minimumLineSpacing="10" minimumInteritemSpacing="10" id="BcB-GV-rAa">
                             <size key="itemSize" width="128" height="128"/>
@@ -30,19 +30,18 @@
                     </collectionView>
                 </subviews>
                 <constraints>
-                    <constraint firstItem="Joo-Hs-yeL" firstAttribute="top" secondItem="nOC-r1-fUS" secondAttribute="top" id="SCk-Mm-7Ny"/>
-                    <constraint firstItem="Joo-Hs-yeL" firstAttribute="leading" secondItem="nOC-r1-fUS" secondAttribute="leading" constant="20" id="c3x-Cr-Mlq"/>
-                    <constraint firstAttribute="trailing" secondItem="Joo-Hs-yeL" secondAttribute="trailing" constant="20" id="n0B-NR-AB1"/>
+                    <constraint firstItem="Joo-Hs-yeL" firstAttribute="leading" secondItem="nOC-r1-fUS" secondAttribute="leading" constant="20" symbolic="YES" id="DhG-LI-9Eg"/>
+                    <constraint firstAttribute="bottom" secondItem="Joo-Hs-yeL" secondAttribute="bottom" id="HBW-uZ-ciy"/>
+                    <constraint firstItem="Joo-Hs-yeL" firstAttribute="centerX" secondItem="nOC-r1-fUS" secondAttribute="centerX" id="VaY-5k-kYC"/>
+                    <constraint firstItem="Joo-Hs-yeL" firstAttribute="top" secondItem="nOC-r1-fUS" secondAttribute="top" id="jdV-9I-Flz"/>
                 </constraints>
             </tableViewCellContentView>
             <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-            <constraints>
-                <constraint firstAttribute="bottom" secondItem="Joo-Hs-yeL" secondAttribute="bottom" id="6vZ-Kx-kCL"/>
-            </constraints>
             <connections>
                 <outlet property="collectionView" destination="Joo-Hs-yeL" id="DZG-hg-onu"/>
+                <outlet property="collectionViewHeightConstraint" destination="4AB-UJ-Z1c" id="4vH-Cj-Hg4"/>
             </connections>
-            <point key="canvasLocation" x="14.503816793893129" y="-29.577464788732396"/>
+            <point key="canvasLocation" x="14.503816793893129" y="-110.56338028169014"/>
         </tableViewCell>
     </objects>
 </document>
